// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders all sizes 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  padding-bottom: 4px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 12px;
  column-gap: 12px;
  row-gap: 0;
}

.emotion-1>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-right: 12px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-bottom: 0;
  }
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    <div
      class="emotion-1"
      data-cy="flex"
    />
  </div>
  @keyframes animation-0 {
  0% {
    -webkit-background-position: 0 0;
    background-position: 0 0;
  }

  100% {
    -webkit-background-position: 12px 0;
    background-position: 12px 0;
  }
}

.emotion-0 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 12px;
  width: 100%;
  -webkit-animation: animation-0 0.6s linear infinite;
  animation: animation-0 0.6s linear infinite;
  background-image: linear-gradient(
      45deg,
      transparent 25%,
      rgba(0, 0, 0, 0.1) 25%,
      rgba(0, 0, 0, 0.1) 50%,
      transparent 50%,
      transparent 75%,
      rgba(0, 0, 0, 0.1) 75%,
      rgba(0, 0, 0, 0.1) 100%
    );
  -webkit-background-size: 12px 12px;
  background-size: 12px 12px;
}

.emotion-1 {
  fill: var(--themeBrandPrimary, #7D58FF);
}

<svg
    class="emotion-0"
    data-cy="progressBar-chart"
    role="presentation"
  >
    <rect
      class="emotion-1"
      height="100%"
      width="40%"
      x="0%"
    />
  </svg>
</DocumentFragment>
`;

exports[`ProgressBar renders all sizes 2`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  padding-bottom: 4px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 12px;
  column-gap: 12px;
  row-gap: 0;
}

.emotion-1>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-right: 12px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-bottom: 0;
  }
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    <div
      class="emotion-1"
      data-cy="flex"
    />
  </div>
  @keyframes animation-0 {
  0% {
    -webkit-background-position: 0 0;
    background-position: 0 0;
  }

  100% {
    -webkit-background-position: 12px 0;
    background-position: 12px 0;
  }
}

.emotion-0 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
  -webkit-animation: animation-0 0.6s linear infinite;
  animation: animation-0 0.6s linear infinite;
  background-image: linear-gradient(
      45deg,
      transparent 25%,
      rgba(0, 0, 0, 0.1) 25%,
      rgba(0, 0, 0, 0.1) 50%,
      transparent 50%,
      transparent 75%,
      rgba(0, 0, 0, 0.1) 75%,
      rgba(0, 0, 0, 0.1) 100%
    );
  -webkit-background-size: 12px 12px;
  background-size: 12px 12px;
}

.emotion-1 {
  fill: var(--themeBrandPrimary, #7D58FF);
}

<svg
    class="emotion-0"
    data-cy="progressBar-chart"
    role="presentation"
  >
    <rect
      class="emotion-1"
      height="100%"
      width="40%"
      x="0%"
    />
  </svg>
</DocumentFragment>
`;

exports[`ProgressBar renders isProcessing 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  padding-bottom: 4px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 12px;
  column-gap: 12px;
  row-gap: 0;
}

.emotion-1>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-right: 12px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-bottom: 0;
  }
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    <div
      class="emotion-1"
      data-cy="flex"
    />
  </div>
  @keyframes animation-0 {
  0% {
    -webkit-background-position: 0 0;
    background-position: 0 0;
  }

  100% {
    -webkit-background-position: 12px 0;
    background-position: 12px 0;
  }
}

.emotion-0 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
  -webkit-animation: animation-0 0.6s linear infinite;
  animation: animation-0 0.6s linear infinite;
  background-image: linear-gradient(
      45deg,
      transparent 25%,
      rgba(0, 0, 0, 0.1) 25%,
      rgba(0, 0, 0, 0.1) 50%,
      transparent 50%,
      transparent 75%,
      rgba(0, 0, 0, 0.1) 75%,
      rgba(0, 0, 0, 0.1) 100%
    );
  -webkit-background-size: 12px 12px;
  background-size: 12px 12px;
}

.emotion-1 {
  fill: var(--themeBrandPrimary, #7D58FF);
}

<svg
    class="emotion-0"
    data-cy="progressBar-chart"
    role="presentation"
  >
    <rect
      class="emotion-1"
      height="100%"
      width="40%"
      x="0%"
    />
  </svg>
</DocumentFragment>
`;

exports[`ProgressBar renders with caption text and value text 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  padding-bottom: 4px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 12px;
  column-gap: 12px;
  row-gap: 0;
}

.emotion-1>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-right: 12px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-bottom: 0;
  }
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-3 {
  line-height: 1.4;
  font-weight: 400;
  font-size: 12px;
  color: var(--themeTextColorSecondary, #76797E);
  fill: var(--themeTextColorSecondary, #76797E);
  text-align: inherit;
  overflow: hidden;
  overflow: -moz-hidden-unscrollable;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
}

.emotion-5 {
  line-height: 1.4;
  font-weight: 500;
  font-size: 14px;
  color: var(--themeTextColorPrimary, #1B2029);
  fill: var(--themeTextColorPrimary, #1B2029);
  text-align: inherit;
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    <div
      class="emotion-1"
      data-cy="flex"
    >
      <div
        class="emotion-2"
        data-cy="flexItem"
      >
        <div
          class="rmTextMargins emotion-3"
          data-cy="captionText"
          title="Caption"
        >
          Caption
        </div>
      </div>
      <div
        class="emotion-4"
        data-cy="flexItem"
      >
        <div
          class="rmTextMargins emotion-5"
          data-cy="text"
        >
          40%
        </div>
      </div>
    </div>
  </div>
  .emotion-0 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
}

.emotion-1 {
  fill: var(--themeBrandPrimary, #7D58FF);
}

<svg
    class="emotion-0"
    data-cy="progressBar-chart"
    role="presentation"
  >
    <rect
      class="emotion-1"
      height="100%"
      width="40%"
      x="0%"
    />
  </svg>
</DocumentFragment>
`;

exports[`ProgressBar renders with multiple segments of data 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  padding-bottom: 4px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 12px;
  column-gap: 12px;
  row-gap: 0;
}

.emotion-1>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-right: 12px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-bottom: 0;
  }
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    <div
      class="emotion-1"
      data-cy="flex"
    />
  </div>
  .emotion-0 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
}

.emotion-1 {
  fill: green;
}

.emotion-2 {
  fill: yellow;
}

<svg
    class="emotion-0"
    data-cy="progressBar-chart"
    role="presentation"
  >
    <rect
      class="emotion-1"
      height="100%"
      width="40%"
      x="0%"
    />
    <rect
      class="emotion-2"
      height="100%"
      width="20%"
      x="40%"
    />
  </svg>
</DocumentFragment>
`;

exports[`ProgressBar renders with one segment of data 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  padding-bottom: 4px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 12px;
  column-gap: 12px;
  row-gap: 0;
}

.emotion-1>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-right: 12px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-bottom: 0;
  }
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    <div
      class="emotion-1"
      data-cy="flex"
    />
  </div>
  .emotion-0 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
}

.emotion-1 {
  fill: var(--themeBrandPrimary, #7D58FF);
}

<svg
    class="emotion-0"
    data-cy="progressBar-chart"
    role="presentation"
  >
    <rect
      class="emotion-1"
      height="100%"
      width="40%"
      x="0%"
    />
  </svg>
</DocumentFragment>
`;
